# EduRisk-AI

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  AUTHENTICATION_FIX_GUIDE.md  CSP_ERROR_FIX.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_CHECKLIST.md  DOCKER_FINAL_FIX_SUMMARY.md  DOCKER_OPTIMIZATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_README.md  ENVIRONMENT_VARIABLES.md  ERROR_RESOLUTION_SUMMARY.md  EduRisk_AI_Comprehensive_Review.md  Eduriskai kiro techspec.md  GITIGNORE_SUMMARY.md  GITIGNORE_UPDATE_LOG.md  GIT_SETUP.md  GIT_TRACKING_GUIDE.md  KIRO_IMPLEMENTATION_PLAN.md  KIRO_IMPROVEMENT_PROMPT_TEMPLATE.md  PROJECT_REVIEW_PROMPT.md  PROJECT_STATUS.md  PROJECT_STATUS_REPORT.md  QUICKSTART.md  QUICK_FIX_INSTRUCTIONS.md  README.md  README_FOR_REVIEW_DOCS.md  REVIEW_SUMMARY.md  SETUP.md  START_HERE_KIRO_PROMPT.md  TASK_12_NAVIGATION_BAR_VERIFICATION.md  TASK_16_IMPLEMENTATION_SUMMARY.md  TASK_24_IMPLEMENTATION_SUMMARY.md  TASK_26_INTEGRATION_SUMMARY.md  TASK_28_PAGINATION_VERIFICATION.md  TASK_8.4_VERIFICATION_SUMMARY.md  TROUBLESHOOTING.md  _START_HERE.md  (+14 more)
.github/: GITIGNORE_QUICK_REFERENCE.md
backend/: .env.example  CONFIG_README.md  ERROR_HANDLING_AND_LOGGING.md  JWT_AUTHENTICATION_GUIDE.md  JWT_QUICK_REFERENCE.md  TASK_14_SUMMARY.md  TASK_16_IMPLEMENTATION_SUMMARY.md  TASK_17_IMPLEMENTATION_SUMMARY.md  TASK_18_IMPLEMENTATION_SUMMARY.md  __init__.py  alembic.ini  config.example.json  config.py  demo_config.py  main.py  test_config.py  test_config_integration.py  test_endpoints.py  test_error_handling.py  test_rate_limit.py  verify_jwt_implementation.py
backend/alembic/: env.py
backend/api/: router.py
backend/core/: __init__.py  security.py
backend/db/: __init__.py  session.py
docker/: .gitkeep  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.postgres  init-db.py  start-backend.sh  start-frontend.sh  validate-setup.sh  wait-for-db.py
frontend/: .env.example  TASK_20_AUTH_STATE_MANAGEMENT_TEST.md  TASK_20_IMPLEMENTATION_SUMMARY.md  TASK_21_IMPLEMENTATION_SUMMARY.md  TASK_23_IMPLEMENTATION_SUMMARY.md  middleware.ts  next.config.js  package-lock.json  package.json
frontend/lib/: api.ts  (+1 more)
ml/: .gitkeep  __init__.py
(+165 files in other folders)
